Generate and set random color palatte

--- a/public/index.html
+++ b/public/index.html
@@ -12,24 +12,24 @@
       <h1 class='title'>Palette-Picker</h1>
     </header>
     <section class='color-boxes'>
-      <div class='box-one'>
-        <div class='box'></div>
+      <div class='box'>
+        <div class='box-one'></div>
         <p class='hex-code one'>#OSNEJS</p>
       </div>
-      <div class='box-two'>
-        <div class='box'></div>
+      <div class='box'>
+        <div class='box-two'></div>
         <p class='hex-code two'>#OSNEJS</p>
       </div>
-      <div class='box-three'>
-        <div class='box'></div>
+      <div class='box'>
+        <div class='box-three'></div>
         <p class='hex-code three'>#OSNEJS</p>
       </div>
-      <div class='box-four'>
-        <div class='box'></div>
-      <p class='hex-code four'>#OSNEJS</p>
+      <div class='box'>
+        <div class='box-four'></div>
+        <p class='hex-code four'>#OSNEJS</p>
       </div>
-      <div class='box-five'>
-        <div class='box'></div>
+      <div class='box'>
+        <div class='box-five'></div>
         <p class='hex-code five'>#OSNEJS</p>
       </div>
     </section>
