--- a/public/index.html
+++ b/public/index.html
@@ -13,24 +13,34 @@
     </header>
     <section class='color-boxes'>
       <div class='box'>
-        <div class='box-one'></div>
-        <p class='hex-code one'>#OSNEJS</p>
+        <div class='box-one'>
+          <img src='./assets/unlock.svg' alt='locked-icon' class='unlocked'/>
+        </div>
+        <p class='hex-code one'></p>
       </div>
       <div class='box'>
-        <div class='box-two'></div>
-        <p class='hex-code two'>#OSNEJS</p>
+        <div class='box-two'>
+          <img src='./assets/unlock.svg' alt='locked-icon' class='unlocked' />
+        </div>
+        <p class='hex-code two'></p>
       </div>
       <div class='box'>
-        <div class='box-three'></div>
-        <p class='hex-code three'>#OSNEJS</p>
+        <div class='box-three'>
+          <img src='./assets/unlock.svg' alt='locked-icon' class='unlocked' />
+        </div>
+        <p class='hex-code three'></p>
       </div>
       <div class='box'>
-        <div class='box-four'></div>
-        <p class='hex-code four'>#OSNEJS</p>
+        <div class='box-four'>
+          <img src='./assets/unlock.svg' alt='locked-icon' class='unlocked' />
+        </div>
+        <p class='hex-code four'></p>
       </div>
       <div class='box'>
-        <div class='box-five'></div>
-        <p class='hex-code five'>#OSNEJS</p>
+        <div class='box-five'>
+          <img src='./assets/unlock.svg' alt='locked-icon' class='unlocked' />
+        </div>
+        <p class='hex-code five'></p>
       </div>
     </section>
     <section class='generate-new-color-section'>
