Appended palette name

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Palette-Picker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
   </head>
   <body>
@@ -58,7 +59,7 @@
       <input class='project-input' type='text' placeholder="New Project Name"/>
       <button class='save-project-button'>Save Project</button>
     </section>
-    <section class='saved-projects'>This is where saved projects go</section>
+    <section class='saved-projects'></section>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="scripts.js"></script>
 </body>
