--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
       <button class='save-project-button'>Save Project</button>
     </section>
     <section class='saved-projects'></section>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="scripts.js"></script>
 </body>
 </html>
